Fix javassist module issue