@@ -71,10 +71,6 @@
         </dependency>
         <dependency>
             <groupId>org.divy</groupId>
-            <artifactId>bo-framework-spring-support-autoconfiguration</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.divy</groupId>
             <artifactId>bo-framework-spring-jsr303-validation</artifactId>
         </dependency>
         <dependency>
@@ -141,8 +137,7 @@
                     <argLine>
                         --add-opens java.base/java.lang=orika.core
                         --add-opens bo.framework.spring.boot.mvc.demo/org.divy.bo.demos.spring.mvc.cards=ALL-UNNAMED
-                        --illegal-access=warn
-                        @{argLine}
+                        --add-opens java.base/java.lang=ALL-UNNAMED
                         ${argLine}
                     </argLine>
                 </configuration>
